// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MaxLengthInput should match snapshot 1`] = `
<Fragment>
  <input
    className="MaxLengthInput input"
  />
</Fragment>
`;

exports[`components/MaxLengthInput should match snapshot 2`] = `
<Fragment>
  <input
    className="MaxLengthInput input"
    defaultValue="less than 20"
  />
</Fragment>
`;

exports[`components/MaxLengthInput should match snapshot 3`] = `
<Fragment>
  <input
    className="MaxLengthInput input has-error"
    defaultValue="Where is Jessica Hyde?"
  />
  <span
    className="MaxLengthInput__validation"
  >
    -
    2
  </span>
</Fragment>
`;
